# nnsight

./: .gitignore  0.6.0.md  0.7.0.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENCE  LICENSE  Makefile  NNsight.md  NNsight_Walkthrough.ipynb  NNsight_v0_2.ipynb  NNsight_v0_3.ipynb  NNsight_v0_3_guide.ipynb  NNsight_v0_4_guide.ipynb  README.md  accelerate.ipynb  conftest.py  context7.json  demo.ipynb  environment.yml  explore_galactica.ipynb  function_vectors_solutions.ipynb  llms.md  nnsight_inference_engine_analysis.md  pp-problem.drawio  pp-solution.drawio  pyproject.toml  pytest.ini  readme.md  setup.cfg  setup.py  walkthrough_script.py
.github/workflows/: publish.yml  python-app.yml
client/: setup.py
client/engine/: config.yml  core.py  request.py
client/engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: Makefile  NDIF-vanilla-cache-compat.md  callgraph-data-0.js  callgraph-manifest.js  callgraph.html  contributing.md  dataflow-data.js  dataflow.html  disambiguation-design.md  followup-1.md  followup.md  forbidden-serialization-design.md  index.html  local-simulation-backend.md  nnsight-source-serialization-design.md  questions.md  remotable-python.md  requirements.txt  source-serialization-tutorial.md  version-check-optimization.md  why-source-serialization.md
docs/concepts/: batching-and-invokers.md  deferred-execution.md  envoy-and-eproperty.md  index.md  interleaver-and-hooks.md  source-tracing.md  threading-and-mediators.md
docs/developing/: adding-a-new-backend.md  adding-a-new-runtime.md  agent-evals.md  architecture-overview.md  backends.md  batching-internals.md  contributing.md  eproperty-deep-dive.md  index.md  interleaver-internals.md  lazy-hook-system.md  performance.md  serialization.md  source-accessor-internals.md  testing.md  tracing-pipeline.md  vllm-integration.md
docs/errors/: batching-not-implemented.md  debug-mode.md  index.md  invoke-during-execution.md  missed-provider-error.md  model-did-not-execute.md  out-of-order-error.md  tokenizer-not-found.md  value-was-not-provided.md  with-block-not-found.md
docs/gotchas/: backward.md  cross-invoke.md  index.md  integrations.md  iteration.md  modification.md  order-and-deadlocks.md  remote.md  save.md  types-and-values.md
docs/models/: diffusion-model.md  index.md  language-model.md  nnsight-base.md  vision-language-model.md  vllm.md
docs/patterns/: ablation.md  activation-patching.md  attention-patterns.md  attribution-patching.md  gradient-based-attribution.md  index.md  logit-lens.md  multi-prompt-comparison.md  per-head-attention.md  sae-and-auxiliary-modules.md  steering.md
docs/questions/: concepts.md  developing-a.md  developing-b.md  errors.md  gotchas.md  models.md  patterns.md  reference.md  remote.md  usage-a.md  usage-b.md
docs/reference/: api-quick-reference.md  config.md  external-resources.md  glossary.md  index.md  version-history.md
docs/remote/: api-key-and-config.md  async-vllm.md  env-comparison.md  index.md  ndif-overview.md  non-blocking-jobs.md  register-local-modules.md  remote-session.md  remote-trace.md  status-and-availability.md
docs/source/: about.rst  conf.py  documentation.rst  features.rst  index.rst  start.rst  status.rst  test.html  tutorials.rst
docs/usage/: access-and-modify.md  all-and-next.md  backward-and-grad.md  barrier.md  cache.md  conditionals-and-loops.md  edit.md  extending.md  generate.md  index.md  invoke-and-batching.md  iter-all-next.md  iter.md  rename-modules.md  save.md  scan.md  session.md  skip.md  source.md  stop-and-early-exit.md  trace.md
engine/: Intervention.py  Invoker.py  Model.py  Module.py  Promise.py  __init__.py  config.yaml  config.yml  core.py  fx.py  intervention.py  logger.py  monkey_patching.py  patching.py  response.py  setup.py  test.py  util.py
engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
engine/alteration/: __init__.py
engine/contexts/: Generator.py  Invoker.py  Runner.py
engine/editing/: Editor.py  WrapperModuleEdit.py
engine/examples/: adhoc.py  adhoc_module.py  (+5 more)
examples/: adhoc_module.py  attribution_patching.py  custommodel.py  diffuser.py  directinvoker.py  embeddings.py  gen.py  lora.py  main_demo.ipynb  memory.py  modulize.py  multitoken.py  optim.py  optim2.py  retain_grad.py  test.py  test_server.py  test_server_llama.py  zzz.py
job_results/: lzqmq.json
legacy/: .gitignore  demo.ipynb  environment.yml
nnsight/: Module.py  __init__.py  logger.py  util.py
prototype/: Model.py  Module.py  Promise.py  intervention.py  models.py  multitoken.py  requirements.txt  setup.py  test.py  util.py
scripts/: build-callgraph.py  build-dataflow.py  callgraph-template.html  dataflow-template.html
server/: InferenceHandler.py  RequestHandler.py  ResponseDict.py  __init__.py  __main__.py  app.py  config.yaml  config.yml  download_models.py  environment.yaml  environment.yml  inference_configurations.py  job_manager.py  model_loader.py  mpdict.py  request_handler.py  util.py
src/: Compiler.py  DependencyCollector.py  Envoy.py  FunctionWhitelistChecker.py  Interleaver.py  NNsight.py  Tracer.py  test.py  tmp.py
tests/: _pp_pull_worker.py  _pp_worker.py  conftest.py  debug_demo.py  explore_remote.py  explore_remote_advanced.py  multitoken.py  mymethods.py  profile_pp_pull.py  profile_pp_quick.py  repro_631.py  repro_cache_stream_ordering.py  run_pp_comparison.py  run_pp_profile.py  stress_pp_serve.py  test_0516_features.py  test_apply_modeloutput.py  test_auto_discovery.py  test_auto_discovery_limits.py  test_autocast_patch.py  test_backward_batching.py  test_c4_invariants.py  test_c5_failure_rollback.py  test_config.py  test_dataclass_serialization.py  test_debug.py  test_diffusion.py  test_disambiguation.py  test_e2e_remote_nnterp.py  test_envoys.py  test_forbidden_serialization.py  test_hf_serve.py  test_hf_serve_integration.py  test_i1_mediator_timeout.py  test_i2_invalid_payload.py  test_i7_finish_request_safety.py  test_i8p_cache_compat_probe.py  test_import_serialization.py  test_iter_edge_cases.py  test_kwargs_model.py  (+31 more)
utils/: model_utils.py
(+630 files in other folders)
