[metadata]
name = engine
version = 0.1.0
author = Jaden Fiotto-Kaufman
author_email = jadenfk@outlook.com
long_description = file: README.md
long_description_content_type = text/markdown
[options]
include_package_data = True
package_dir = 
    = engine
install_requires =
    baukit @ git+https://github.com/davidbau/baukit.git@e14a18a6ad6cf9e0d6a5dc7a97e671e393c01682
    transformers
    protobuf
    python-socketio[client]
    tokenizers<0.14
    pydantic
    torch
    sentencepiece
    torchvision
    accelerate

[options.package_data]
example = config.yaml