[metadata]
name = nnsight
version = 0.0.4
author = Jaden Fiotto-Kaufman
author_email = jadenfk@outlook.com
long_description = file: README.md
long_description_content_type = text/markdown
[options]
include_package_data = True
install_requires =
    transformers
    protobuf
    python-socketio[client]
    tokenizers<0.14
    pydantic
    torch
    sentencepiece
    torchvision
    accelerate
    diffusers

[options.package_data]
nnsight = 
    config.yaml
    nnsight.log